--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,6 @@ a {
     text-decoration: none;
 }
 
-
-
 .flex_center {
     display: flex;
     justify-content: space-between;
@@ -27,6 +25,7 @@ a {
     background-position: center;
     /* 第２回追加コード */
     padding: 0px 20px;
+    /*  */
 }
 
 .kv_content {
@@ -45,7 +44,7 @@ a {
     margin: 0px 30px;
 }
 
-.nav a {
+.nav  a {
     color: #FFF;
     font-family: 'Noto Serif JP', serif;
     font-size: 16px;
@@ -53,7 +52,26 @@ a {
     font-weight: 400;
     line-height: 40px;
     letter-spacing: 4.8px;
+    position: relative;
 }
+
+/* 第２回追加コード */
+.nav .flex_center a::after {
+    position: absolute;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #FFF;
+    bottom: -1px;
+    opacity: 0;
+}
+
+.nav .flex_center a:hover::after {
+    opacity: 1;
+    transition: 0.3s;
+}
+/*  */
 
 .reservation_link {
     width: 140px;
@@ -64,6 +82,13 @@ a {
     text-align: center;
     margin-left: 20px;
 }
+
+/* 第２回追加コード */
+.reservation_link:hover {
+    opacity: 0.8;
+    transition: 0.3s;
+}
+/*  */
 
 .kv_text {
     position: absolute;
@@ -150,6 +175,104 @@ a {
     display: none;
 }
 
+.room {
+    background-image: url(../img/room_bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 200px 20px;
+    position: relative;
+}
+
+.room_content {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.content_title {
+    max-width: 226px;
+}
+
+.ja_title {
+    color: #383838;
+    font-family: 'Noto Serif JP',serif;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 8.4px;
+}
+
+.en_title {
+    color: #383838;
+    font-family: EB Garamond;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 40px;
+    /* 200% */
+    letter-spacing: 6px;
+}
+
+.line {
+    width: 1px;
+    height: 40px;
+    background-color: black;
+}
+
+.room_description {
+    margin: 80px 0px;
+    color:#383838;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 34px;
+    letter-spacing: 5.4px;
+}
+
+.room_select_list {
+    gap: 30px;
+}
+
+.room_select_list p{
+    background-color: #EDEBD7;
+    color: var(--, #383838);
+    text-align: center;
+    font-family: 'Noto Serif JP',serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 5.4px;
+    width: 100%;
+    padding: 20px 0px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.room_select_list p:hover,.room_select_list .active {
+    background-color: #B8A973;
+    color: white;
+}
+
+.room_cloud {
+    width: 240px;
+    position: absolute;
+    top: 100px;
+    right: 90px;
+    animation: anim_room_cloud ease-in-out infinite alternate 3.0s;
+}
+
+@keyframes anim_room_cloud {
+    0% {
+        transform: translate(0, 0px);
+    }
+
+    100% {
+        transform: translate(0px, 20px);
+    }
+}
+
 @media screen and (max-width: 844px) {
     .kv {
         height: 380px;
@@ -217,4 +340,38 @@ a {
     .about_images img:last-child {
         width: 40%;
     }
+
+    .room {
+        padding: 50px 20px;
+    }
+
+    .room_select_list {
+        flex-flow: column;
+        gap: 20px;
+    }
+    .room_cloud {
+        width: 113px;
+        top: 20px;
+        right: 12px;
+    }
+    .room_description {
+        margin: 50px 0px;
+        font-size: 16px;
+        line-height: 32px;
+        letter-spacing: 4.8px;
+    }
+    .ja_title {
+        font-size: 22px;
+    }
+    .en_title {
+        font-size: 16px;
+    }
+    .content_title {
+        max-width: 190px;
+    }
+    .line {
+        height: 30px;
+    }
 }
+
+/*  */
